# OpenAI_ROS_dev

./: README.md  clean_processes.sh  installation.sh
openai_examples_projects/cartpole_openai_ros_examples/: CMakeLists.txt  package.xml
openai_examples_projects/cartpole_openai_ros_examples/config/: cartpole_mbalunovic_params.yaml  cartpole_n1try_params.yaml  cartpole_n1try_params_v2.yaml  cartpole_qlearn_params.yaml  cartpole_ruippeixotog_params.yaml  cartpole_ruippeixotog_params_gamma_high.yaml  cartpole_ruippeixotog_params_gamma_low.yaml  cartpole_ruippeixotog_params_gamma_mid.yaml
openai_examples_projects/cartpole_openai_ros_examples/docs/: web_bookmarks.rst
openai_examples_projects/cartpole_openai_ros_examples/launch/: start_training_mbalunovic.launch  start_training_n1try.launch  start_training_n1try_2D.launch  start_training_n1try_openairos_v2.launch  start_training_original_qlearn.launch  start_training_ruippeixotog.launch  start_training_ruippeixotog_gymcomputers.launch
openai_examples_projects/cartpole_openai_ros_examples/scripts/: cartpole_helloworld.py  cartpole_helloworld2.py  cartpole_ruippeixotog_algorithm.py  q_learning_agent.py
openai_examples_projects/fetch_openai_ros_example/: CMakeLists.txt  package.xml
openai_examples_projects/fetch_openai_ros_example/config/: fetch_HER_params.yaml  fetch_n1try_params.yaml  fetch_n1try_params_v2.yaml  fetchsimple_n1try_params_v2.yaml
openai_examples_projects/fetch_openai_ros_example/launch/: norio_test.launch  start_HER.launch  start_fetchsimple_n1try_v2.launch  start_training_n1try_save_and_load.launch  (+1 more)
(+56 files in other folders)
